# rust-websockets

./: Cargo.toml  README.md
.github/workflows/: clippy.yml  create-release.yml  fmt.yml  release.yml  tag.yml
docker/: ws-base.Dockerfile  ws-rust.Dockerfile  ws.Dockerfile
docker/alpine/: base.Dockerfile  rust.Dockerfile  ws.Dockerfile
docker/ubuntu/: base.Dockerfile  server.Dockerfile  ws.Dockerfile
libs/axum-example/: Cargo.toml
libs/axum-example-with-ws-extractor/: Cargo.toml
libs/axum-example-with-ws-extractor/src/: handle_socket.rs  main.rs  process_message.rs  ws_handler.rs
libs/axum-example/src/: handle_socket.rs  main.rs  process_message.rs  ws_handler.rs
libs/axum-tws-example/: Cargo.toml
libs/axum-tws-example/src/: handle_upgrade.rs  handle_ws.rs  main.rs  mimalloc_memory_loop.rs
libs/axum-ws-extractor/: Cargo.toml
libs/axum-ws-extractor/src/: lib.rs
libs/client/: Cargo.toml
libs/client/src/: main.rs  process_message.rs  spawn_client.rs
libs/common/: Cargo.toml
libs/common/src/: connection_counter.rs  lib.rs  malloc_trim_memory_loop.rs  memory_stats_loop.rs  mimalloc_memory_loop.rs  options.rs  stats.rs  tcp_listener.rs  version.rs
libs/options/: Cargo.toml
libs/options/src/: lib.rs
libs/tungstenite-example/: Cargo.toml
libs/tungstenite-example/src/: accept_connection.rs  main.rs
scripts/: build-all.sh  deploy-docker.sh  docker.md  ip-alias.sh  load.sh  run-docker.sh
