[profile.release]
overflow-checks = true
#lto = "fat"
#codegen-units = 1
#strip = true
[profile.release.build-override]
#opt-level = 3
incremental = false
#codegen-units = 1

[workspace]
members = ["libs/*"]
resolver = "2"

[workspace.package]
authors = ["Ohad Dahan <ohaddahan@gmail.com>"]
version = "0.0.1"

[workspace.dependencies]
libc = { version = "0.2.169" }
mimalloc = { version = "0.1.43" }
libmimalloc-sys = { version = "0.1.39" }
tikv-jemallocator = { version = "0.6.0", features = ["background_threads"] }
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1.43.0", features = ["full"] }
anyhow = { version = "1.0.71" }
thiserror = { version = "1.0.40" }
memory-stats = { version = "1.2.0" }

[workspace.dependencies.rand]
version = "0.8.5"
features = ["min_const_gen"]

[workspace.dependencies.uuid]
version = "1.3.4"
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde", # Enable serialization/deserialization of UUIDs
  "js", # Enable UUID generation in WebAssembly
]

