[profile.release]
overflow-checks = true
[profile.release.build-override]
incremental = false

[workspace]
members = ["libs/*"]
resolver = "2"

[workspace.package]
authors = ["Ohad Dahan <ohaddahan@gmail.com>"]
version = "0.0.2"

[workspace.dependencies]
procfs = { version = "0.17.0" }
libc = { version = "0.2.169", features = ["extra_traits"] }
mimalloc = { version = "0.1.43" }
libmimalloc-sys = { version = "0.1.39" }
tikv-jemallocator = { version = "0.6.0", features = ["background_threads"] }
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
anyhow = { version = "1.0.71" }
memory-stats = { version = "1.2.0" }
axum-tws = { version = "0.4.0" }