[package]
name = "axum-example-with-ws-extractor"
edition = "2021"
authors.workspace = true
version.workspace = true

[dependencies]
libc = { workspace = true, features = ["extra_traits"], optional = true }
axum = { version = "0.7.9", features = ["ws", "macros"] }
futures = { version = "0.3" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0", features = ["full"] }
common = { path = "../common" }
mimalloc = { workspace = true, features = ["extended"], optional = true }
libmimalloc-sys = { workspace = true, features = ["extended"], optional = true }
tikv-jemallocator = { workspace = true, features = ["background_threads"], optional = true }
anyhow = { workspace = true }
axum-ws-extractor = { path = "../axum-ws-extractor" }

[features]
mimalloc = ["dep:mimalloc", "libmimalloc-sys"]
jemalloc = ["dep:tikv-jemallocator"]
libc = ["dep:libc"]