[package]
name = "axum-tws-example"
edition = "2021"
authors.workspace = true
version.workspace = true

[dependencies]
axum = { version = "0.7.9", features = ["ws", "macros"] }
libc = { workspace = true, features = ["extra_traits"], optional = true }
axum-tws = { workspace = true }
tokio = { workspace = true, features = ["full"] }
common = { path = "../common" }
mimalloc = { workspace = true, features = ["extended"], optional = true }
libmimalloc-sys = { workspace = true, features = ["extended"], optional = true }
tikv-jemallocator = { workspace = true, features = ["background_threads"], optional = true }
anyhow = { workspace = true }

[features]
mimalloc = ["dep:mimalloc", "libmimalloc-sys"]
jemalloc = ["dep:tikv-jemallocator"]
libc = ["dep:libc"]