[package]
name = "axum-ws-extractor"
edition = "2021"
authors.workspace = true
version.workspace = true

[dependencies]
axum = { version = "0.7.9", features = ["ws", "macros"] }
axum-core = { version = "0.5.0" }
base64 = { version = "0.22.1" }
bytes = { version = "1.9.0" }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
http = { version = "1.2.0" }
http-body = { version = "1.0.1" }
hyper = { version = "1.5.2" }
sha-1 = { version = "0.10.1" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1" }
hyper-util = { version = "0.1.10" }
async-trait = { version = "0.1.85" }

[features]
http2 = ["hyper/http2", "hyper-util/http2"]