[package]
name = "client"
edition = "2021"
authors.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
futures-util = { version = "0.3.31" }
tokio-tungstenite = { version = "0.26.1" }
uuid = { workspace = true }
axum = "0.8.1"
options = { path = "../options" }
clap = { workspace = true, features = ["derive"] }