[package]
name = "client"
edition = "2021"
authors.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
futures-util = { version = "0.3.31" }
tokio-tungstenite = { version = "0.26.1", features = ["tokio-rustls", "rustls", "native-tls"] }
axum = "0.8.1"
common = { path = "../common" }