[package]
name = "common"
edition = "2021"
authors.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
memory-stats = { workspace = true, features = ["always_use_statm"] }
mimalloc = { workspace = true, features = ["extended"] }
libmimalloc-sys = { workspace = true, features = ["extended"] }
anyhow = { workspace = true }
libc = { workspace = true, features = ["extra_traits"] }