[package]
name = "common"
edition = "2021"
authors.workspace = true
version.workspace = true

[dependencies]
axum = { version = "0.7.9", features = ["ws", "macros"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
memory-stats = { workspace = true, features = ["always_use_statm"] }
mimalloc = { workspace = true, features = ["extended"] }
libmimalloc-sys = { workspace = true, features = ["extended"] }
anyhow = { workspace = true }
libc = { workspace = true, features = ["extra_traits"] }
[target.'cfg(target_os = "linux")'.dependencies]
procfs = { workspace = true }