[package]
name = "tungstenite-example"
edition = "2021"
authors.workspace = true
version.workspace = true

[dependencies]
tungstenite = "0.26.1"
libc = { workspace = true, features = ["extra_traits"], optional = true }
futures = { version = "0.3" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.0", features = ["tokio-rustls", "rustls", "native-tls"] }
common = { path = "../common" }
clap = { workspace = true, features = ["derive"] }
mimalloc = { workspace = true, features = ["extended"], optional = true }
libmimalloc-sys = { workspace = true, features = ["extended"], optional = true }
tikv-jemallocator = { workspace = true, features = ["background_threads"], optional = true }

[features]
mimalloc = ["dep:mimalloc", "libmimalloc-sys"]
jemalloc = ["dep:tikv-jemallocator"]
libc = ["dep:libc"]